Firefox very slow on Reddit with VoiceOver and Braille enabled
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
People
(Reporter: MarcoZ, Assigned: eeejay)
Details
(Keywords: perf, Whiteboard: [Mac2020_2])
Attachments
(1 file)
Steps:
- Open Reddit and log in.
- Open an article, I was using this.
- Navigate using VO. Observations:
- Navigating by Heading is fast.
- Navigating by VoiceOver+RightArrow or VoiceOver+LeftArrow sequentially is very slow. It does work, but takes several seconds to go from item to item.
- Expected: Should be fast.
Assignee | ||
Comment 1•2 years ago
|
||
I can't reproduce this. Can you say on which two nodes, or sequence of nodes, you see lag?
Assignee | ||
Comment 2•2 years ago
|
||
Ah! I think I found this issue. Assuming you have a braille device connected. There are certainly slowdowns when I enable braille.
Reporter | ||
Comment 3•2 years ago
|
||
Yes, I do have a Braille display connected. Sorry, this is so second nature for me (and many other Europeans) that I sometimes forget that this could be a deciding factor.
Assignee | ||
Comment 4•2 years ago
|
||
I worry that there is some tree corruption happening here. So I want to make this a P1 and investigate further.
Reporter | ||
Comment 5•2 years ago
|
||
No objections from this end. I can still reproduce this reliably. I also see a much less drastic, but still profound, difference when navigating through a Gmail conversation with and without Braille. Without Braille, it's fast, with, it's laggy, but not as bad as this Reddit, but probably a similar cause.
Please let me know if I can be of any more help, since I always have a Braille display connected. I am also set up to build.
Assignee | ||
Comment 6•2 years ago
|
||
It seems that VO mistakenly thinks the web area is a descendant of itself. This causes all kinds of cyclical parent child relationships that makes VO over-query us.
This patch remedies that by not returning the web area when do an immediate child search starting from the root group - in any direction.
Updated•2 years ago
|
Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/589cd0252a11 Don't return web area as result when searching backwards from root group. r=morgan
Comment 8•2 years ago
|
||
bugherder |
Comment 9•2 years ago
|
||
The patch landed in nightly and beta is affected.
:eeejay, is this bug important enough to require an uplift?
If not please set status_beta
to wontfix
.
For more information, please visit auto_nag documentation.
Description
•