Bug 1675301 - Don't return web area as result when searching backwards from root group. r=morgan

It seems that VO mistakenly thinks the web area is a descendant of itself. This causes all kinds of cyclical parent child relationships that makes VO over-query us.

This patch remedies that by not returning the web area when do an immediate child search starting from the root group - in any direction.

Differential Revision: https://phabricator.services.mozilla.com/D97819